Add presentation to front page

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -74,13 +74,10 @@
           {# Translators: description of project Tomo #}
           <h3>{% trans 'Your personal programming teacher.' %}</h3>
 
-          <!-- <div class="col-md-6 tomo-intro">
+          <div class="col-md-6 tomo-intro">
             <hr>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item"
-                      src="https://player.vimeo.com/video/30368682"></iframe>
-            </div>
-          </div> -->
+            <script async class="speakerdeck-embed" data-id="6ec1b05b5f9b4dad964da31b47471a98" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+          </div>
         </div>
       </div>
     </div>
