Remove white border on initial page
Closes #82

--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -1,5 +1,6 @@
 .intro-header {
   background: url(../img/intro-bg.jpg) center center no-repeat;
+  background-size: cover;
 }
 
 /* for centering images according to HTML5 standard */
