Rename favorite courses to my courses

--- a/web/templates/courses/_course_header.html
+++ b/web/templates/courses/_course_header.html
@@ -16,9 +16,9 @@
       {% csrf_token %}
       <button class="tomo-unenroll"
               type="submit"
-              aria-label="{% trans "Remove from favorites" %}"
+              aria-label="{% trans "Remove from my courses" %}"
               data-toggle="tooltip"
-              title="{% trans "Remove from favorites" %}">
+              title="{% trans "Remove from my courses" %}">
         <i class="fa fa-star fa-lg"></i>
         <i class="fa fa-star-o fa-lg"></i>
       </button>
@@ -30,9 +30,9 @@
       {% csrf_token %}
       <button class="tomo-enroll"
               type="submit"
-              aria-label="{% trans "Add to favorites" %}"
+              aria-label="{% trans "Add to my courses" %}"
               data-toggle="tooltip"
-              title="{% trans "Add to favorites" %}">
+              title="{% trans "Add to my courses" %}">
         <i class="fa fa-star fa-lg"></i>
         <i class="fa fa-star-o fa-lg"></i>
       </button>
