--- a/web/templates/homepage.html
+++ b/web/templates/homepage.html
@@ -31,8 +31,8 @@
                 method="post" id='enroll_in_course_form'>
             {% csrf_token %}
             <button class="tomo-enroll" type="submit"
-                    aria-label="{% trans "Add to favorites" %}" data-toggle="tooltip"
-                    title="{% trans "Add to favorites" %}">
+                    aria-label="{% trans "Add to my courses" %}" data-toggle="tooltip"
+                    title="{% trans "Add to my courses" %}">
               <i class="fa fa-star fa-lg"></i>
               <i class="fa fa-star-o fa-lg"></i>
             </button>
