Add observed field to course students
Closes #65

--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -64,20 +64,30 @@
         <hr>
         <ul class="tomo-students">
           {% for student in students %}
-          <form action="{% url 'promote_to_teacher' course.pk  student.pk%}"  method="post" id='promote_to_teacher_form'>
-            {% csrf_token %}
             <li>
               <a href="{% url 'course_progress' course.pk student.pk %}">{{ student.get_full_name }}</a>
               <span id="student{{student.pk}}" class="chart"></span>
               <span class="tomo-teacher-switch">
+                <form action="{% url 'toggle_observed' course.pk  student.pk%}"  method="post" id='toggle_observed_form'>
+                  {% csrf_token %}
+                {# Translators: Stop observing the student #}
+                <button type="submit" aria-label="Demote" data-toggle="tooltip"
+                        title="{% trans 'Stop observing' %}">
+                  <i class="fa fa-eye-slash"></i>
+                </button>
+                </form>
+              </span>
+              <span class="tomo-teacher-switch">
+                <form action="{% url 'promote_to_teacher' course.pk  student.pk%}"  method="post" id='promote_to_teacher_form'>
+                  {% csrf_token %}
                 {# Translators: Demote teacher to student - button #}
                 <button type="submit" aria-label="Demote" data-toggle="tooltip"
                         title="{% trans 'Promote to teacher' %}">
                   <i class="fa fa-graduation-cap"></i>
                 </button>
-              </form>
-            </span>
-          </li>
+                </form>
+              </span>
+            </li>
           {% endfor %}
         </ul>
         {% else %}
