--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -189,7 +189,7 @@ footer img { max-width: 100%; max-height: 6em; margin-bottom: 20px; }
 .affix-top, .affix { position: static; }
 @media (min-width: 979px) {
   #sidebar.affix-top { position: static; margin-top: 30px; width: 228px; }
-  #sidebar.affix { position: fixed; top: 70px; width: 228px; }
+  #sidebar.affix { position: fixed; top: 70px; width: 228px; bottom: 0px; overflow-y: scroll;}
 }
 #sidebar a { font-size: 1em;  }
 #sidebar li { margin: 15px 0; }
