--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -54,7 +54,11 @@ li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { di
 .tomo-teacher-switch button { margin: 0 0 0 10px; border: none; padding: 0; background: none; color: #000; }
 .tomo-teacher-switch button:hover { color: #D7A02C }
 .tomo-teacher-switch form {display: inline;}
-
+.hide-courses { color: #666; text-decoration: underline; font-size: small; display: block; font-size: 1.4em;
+margin-left: 30px; margin-bottom: 5px;}
+.tomo-other h2 {
+  margin-left: 30px;
+}
 .tomo-home { margin: 0 40px 0 0; padding: 0; }
 .tomo-home img { height: 100%; }
 
@@ -68,7 +72,6 @@ li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { di
 .tomo-login .btn { margin: 0px 7px; background-color: rgba(135, 143, 40, .5) }
 .tomo-login .btn i { margin-right: 10px; }
 .tomo-login .fa-google { vertical-align: -25% } /* vertical position fix */
-
 
 .intro-message h3 { clear: both; }
 
@@ -132,13 +135,13 @@ li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { di
 .tomo-add-task:hover { background-color: rgba(175, 152, 42, .2); color: #AF982A; }
 
 .tomo-other { margin: 0; padding: 0; }
-.tomo-other .col-md-4 { margin-right: 0px; height: 15em; padding: 2em 4em; }
+.tomo-other .col-md-4 { margin-right: 0px; height: 10em; padding: 2em 4em; }
 .tomo-other .col-md-4:hover { background-color: rgba(255, 255, 255, 0.5);}
-.tomo-other h3 { padding-right: 40px; font-size: 1.4em; }
+.tomo-other h3 { padding-right: 40px; font-size: 1.4em; margin-top: 10px; }
 .tomo-other .tomo-institution { margin: 0; padding: 0; text-align: right; }
 .tomo-other button { border: none; background: none; }
 .tomo-course-header button { border: none; background: none; font-size: 1.2em;}
-.tomo-other .tomo-enroll { margin-top: 20px; color: #fff; }
+.tomo-other .tomo-enroll { margin-top: 10px; color: #fff; }
 .tomo-other .tomo-enroll .fa-star, .tomo-enroll:hover .fa-star-o { display: none; }
 .tomo-other .tomo-enroll:hover .fa-star { display: inline; color: #D7A02C; }
 
