Add closing message

--- a/tomo/templates/home.html
+++ b/tomo/templates/home.html
@@ -5,6 +5,19 @@
 {% endblock %}
 
 {% block content %}
+<div class="alert alert-danger">
+  <h1>Obvestilo o prenehanju delovanja</h1>
+  <h2>
+  Stara prototipna spletna storitev, na kateri se nahajate sedaj,
+  bo obratovala <strong>do 30. septembra 2016</strong> (ali mogoče še kakšen teden).
+  </h2>
+</div>
+<div class="alert alert-block alert-info">
+  <h4>Obvestilo o razvoju nove spletne storitve</h4>
+  V okviru razpisa za sofinanciranje razvoja in vzpostavitve e-storitev in mobilnih aplikacij na področju napredne uporabe IKT v izobraževanju 2014-2015 (Uradni list RS, št. 67/14)
+  smo na Fakulteti za matematiko in fiziko razvili novo spletno storitev Projekt Tomo,
+  ki se nahaja na strani <a href="https://www.projekt-tomo.si/">https://www.projekt-tomo.si/</a>.
+</div>
   <div class="hero-unit">
     <h1>Pozdravljeni!</h1>
     <p>
