--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -16,6 +16,7 @@
     <link href="//fonts.googleapis.com/css?family=Open Sans:300,400,700,300italic,400italic,700italic" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">      
     <link href="{% static 'css/tomo.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
   </head>
   <body>
     {% block navigation %}
