Add solution validity indicator in code review

--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -40,6 +40,12 @@
                 <div class="row-height">
                   <div class="col-xs-12 col-sm-6 col-sm-height">
                     <div class="tomo-solution-user">
+                      <div class="tomo-solution-valid">
+                        {% if part.attempt.valid %}<i class="color5 fa fa-circle fa-lg"></i>
+                        {% elif part.attempt %}<i class="color3 fa fa-circle fa-lg"></i>
+                        {% else %}<i class="color1 fa fa-circle fa-lg"></i>
+                        {% endif %}
+                      </div>
                       {# Translators: Title of user solutions column. #}
                       {% trans 'Your solution' %}
                     </div>
