Equip attempts with submission timestamp

--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -52,6 +52,7 @@
                     <div class="inside inside-full-height">
                       <div class="content">
                         <div class="tomo-solution-code-user">
+						Čas oddaje: {{part.attempt.created}}
                           {% if part.attempt %}
                           <div class="tomo-pre">{{ part.attempt.solution }}</div>
                           {% else %}
