--- a/web/templates/problems/solutions.html
+++ b/web/templates/problems/solutions.html
@@ -75,7 +75,7 @@
                         {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE or is_teacher %}
                         <div class="tomo-pre">{{ part.solution }}</div>
 
-                        {% elif problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
+                        {% elif problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN or problem_set.solution_visibility == problem_set.PROBLEM_HIDDEN %}
                         {# Translators: in solution comparison table #}
                         <div class="tomo-message">{% trans 'Official solutions are hidden.' %}</div>
 
