--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -82,7 +82,7 @@
                         <li><a href="mailto:info@projekt-tomo.si">{% trans 'Contact' %}</a></li>
                     </ul>
                     
-                    <p class="copyright text-muted small">{% trans "Copyright &copy; Faculty of Mathematics and Physics, University of Ljubljana, 2015. All Rights Reserved "%}</p>
+                    <p class="copyright text-muted small">{% trans "Copyright &copy; Faculty of Mathematics and Physics, University of Ljubljana, 2015. All Rights Reserved. "%}</p>
                 </div>
             </div>
         </div>
