Popravek pravopisnih napak v help-u.

--- a/web/templates/help.html
+++ b/web/templates/help.html
@@ -18,14 +18,14 @@
 </p>
 
 <h2>Tehnične zahteve</h2>
-    <ol>
-        <li>spletni brskalnik</li>
-        <li>možnost nalaganja datotek</li>
-        <li>urejevalnik za pisanje kode (priporočamo IDLE)</li>
-        <li>Python 3.0 ali več (dostopen <a href="https://www.python.org/downloads/">tukaj</a>)</li>
-    </ol>
+<ol>
+    <li>spletni brskalnik</li>
+    <li>možnost nalaganja datotek</li>
+    <li>urejevalnik za pisanje kode (priporočamo IDLE)</li>
+    <li>Python 3.0 ali več (dostopen <a href="https://www.python.org/downloads/">tukaj</a>)</li>
+</ol>
 
-<a href="{% url 'help_students' %}"><h4>Navodila za uporabo - učenci</h4></a>
-<a href="{% url 'help_teachers' %}"><h4>Navodila za uporabo - učitelji</h4></a>
+<a href="{% url 'help_students' %}"><h4>Navodila za uporabo &ndash; učenci</h4></a>
+<a href="{% url 'help_teachers' %}"><h4>Navodila za uporabo &ndash; učitelji</h4></a>
 </div></div>
 {% endblock content %}
