Pustil sporočilo učencem če ni problemov v predmetu.

--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -24,16 +24,21 @@
       <div class="col-md-8">
         <ul class="list-group tomo-courses">
           {% for problem_set in course.annotated_problem_sets %}
-          {% include 'courses/_problem_set.html' %}
+            {% include 'courses/_problem_set.html' %}
+          {% empty %}
+            {% if not show_teacher_forms %}
+              {# Translators: Tells students there is no problems yet in this course. #}
+              {% trans "This couse does not have any problems yet. Please wait for a teacher to add some." %}
+            {% endif %}
           {% endfor %}
         </ul>
         {% if show_teacher_forms %}
-        <hr>
-                    <button class="btn btn-default btn-lg btn-for-modal tomo-add-task" aria-label="Create" data-url="{% url 'problem_set_create' course.id %}">
-                <i class="fa fa-download fa-plus"></i>
-                     {# Translators: Button for creating new problem. #}
-                     {% trans "Add new problem set" %}
-            </button>
+          <hr>
+          <button class="btn btn-default btn-lg btn-for-modal tomo-add-task" aria-label="Create" data-url="{% url 'problem_set_create' course.id %}">
+            <i class="fa fa-download fa-plus"></i>
+            {# Translators: Button for creating new problem. #}
+            {% trans "Add new problem set" %}
+          </button>
         {% endif %}
       </div>
 
